--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -6,7 +6,7 @@
   <title>Web Audio Basics</title>
   <meta name="description" content="Audio basics demo for Web Audio API">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 
 		<section class="tape">
 
-			<audio src="outfoxing.mp3" crossorigin="anonymous" ></audio>
+			<audio src="static/outfoxing.mp3" crossorigin="anonymous" ></audio>
 
 <!-- 			type="audio/mpeg" -->
 
